--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container" *ngIf="weatherData">
   <div class="upper-data">
-    <img src="../assets/hot.jpeg" *ngIf="14 > 15">
-    <img src="../assets/cold.jpeg" *ngIf="14 <= 15">
+    <img src="../assets/hot.jpeg" *ngIf="weatherData.main.temp > 59">
+    <img src="../assets/cold.jpeg" *ngIf="weatherData.main.temp < 59">>
 
     <div class="weather-data">
-      <div class="location">Tehran</div>
-      <div class="temperature">{{14.40 | number:'1.0-0'}}°C</div>
+      <div class="location">{{weatherData.name}}</div>
+      <div class="temperature">{{weatherData.main.temp| number:'1.0-0'}}°F</div>
     </div>
   </div>
   <div class="lower-data">
@@ -13,14 +13,14 @@
       More Information
     </div>
     <div class="more-info-container">
-      
+
       <div class="info-block">
         <div class="info-block-label">
           <img src="../assets/min.png" alt="">
           <span>min</span>
         </div>
         <div class="info-block-value">
-          10°C
+          {{weatherData.main.temp_min}}°F
         </div>
       </div>
 
@@ -30,7 +30,7 @@
           <span>max</span>
         </div>
         <div class="info-block-value">
-          20°C
+          {{weatherData.main.temp_max}}°F
         </div>
       </div>
 
@@ -40,7 +40,7 @@
           <span>humidity</span>
         </div>
         <div class="info-block-value">
-          77%
+          {{weatherData.main.humidity}}%
         </div>
       </div>
 
@@ -50,7 +50,7 @@
           <span>wind</span>
         </div>
         <div class="info-block-value">
-          11 km/h
+          {{weatherData.wind.speed}}
         </div>
       </div>
     </div>
